--- a/package.json
+++ b/package.json
@@ -1,16 +1,14 @@
 {
     "dependencies": {
-        "@project-serum/anchor": "^0.20.1",
-        "@types/secp256k1": "^4.0.3",
-        "secp256k1": "^4.0.3",
-        "tweetnacl": "^1.0.3"
+        "@noble/ed25519": "^1.6.0",
+        "@project-serum/anchor": "^0.20.1"
     },
     "devDependencies": {
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
-        "ts-mocha": "^8.0.0",
+        "ts-mocha": "^10.0.0",
         "typescript": "^4.3.5"
     }
 }
